# reco

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  commit-run-source.txt  commit-source.txt
.github/workflows/: bump-book.yml  check-semver.yml  check.yml  clippy.yml  coverage.yml  doc-check.yml  format.yml  sort-manifests.yml  test.yml
benches/: find_line_from_setup.rs
crates/book/: Cargo.toml  README.md
crates/core/: Cargo.toml  README.md
crates/core/src/: code.rs  lib.rs  volume.rs
crates/librarian/: Cargo.toml  README.md
crates/librarian/src/: constants.rs  main.rs
crates/reco/: Cargo.toml
crates/reco/src/: lib.rs
examples/find-opening/: Cargo.toml
examples/find-opening/src/: main.rs
librarian/: Cargo.toml  README.md
librarian/src/: constants.rs  create_variation_files.rs  get_archive_and_commit.rs  get_line_expression_string.rs  get_name.rs  get_name_and_variation.rs  get_opening_constant_expression_string.rs  get_opening_constant_item_string.rs  get_uci.rs  get_variation_item_string.rs  line_meta.rs  main.rs  variation_meta.rs
src/: a.rs  book.rs  book_find.rs  category.rs  code.rs  concat_slices.rs  lib.rs  line.rs  opening.rs  variation.rs  volume.rs
src/book/: mod.rs
src/book/alekhine_defense/: mod.rs
src/book/amar_opening/: mod.rs
src/book/amazon_attack/: mod.rs
src/book/amsterdam_attack/: mod.rs
src/book/anderssen_s_opening/: mod.rs
src/book/anderssens_opening/: mod.rs
src/book/australian_defense/: mod.rs
src/book/barnes_defense/: mod.rs
src/book/barnes_opening/: mod.rs
src/book/benko_gambit/: mod.rs
src/book/benko_gambit_accepted/: mod.rs
src/book/benko_gambit_declined/: mod.rs
src/book/benoni_defense/: mod.rs
src/book/bird_opening/: mod.rs
src/book/bishop_s_opening/: mod.rs
src/book/bishops_opening/: mod.rs
src/book/blackmar_diemer_gambit/: mod.rs
src/book/blackmar_diemer_gambit_accepted/: mod.rs
src/book/blackmar_diemer_gambit_declined/: mod.rs
src/book/blumenfeld_countergambit/: mod.rs
src/book/blumenfeld_countergambit_accepted/: mod.rs
src/book/bogo_indian_defense/: mod.rs
src/book/bongcloud_attack/: mod.rs
src/book/borg_defense/: mod.rs
src/book/canard_opening/: mod.rs
src/book/caro_kann_defense/: mod.rs
src/book/carr_defense/: mod.rs
src/book/catalan_opening/: mod.rs
src/book/center_game/: mod.rs
src/book/center_game_accepted/: mod.rs
src/book/clemenz_opening/: mod.rs
src/book/colle_system/: mod.rs
src/book/creepy_crawly_formation/: mod.rs
src/book/czech_defense/: mod.rs
src/book/danish_gambit/: mod.rs
src/book/danish_gambit_accepted/: mod.rs
src/book/danish_gambit_declined/: mod.rs
src/book/dory_defense/: mod.rs
src/book/dresden_opening/: mod.rs
src/book/duras_gambit/: mod.rs
src/book/dutch_defense/: mod.rs
src/book/east_indian_defense/: mod.rs
src/book/elephant_gambit/: mod.rs
src/book/english_defense/: mod.rs
src/book/english_opening/: mod.rs
src/book/english_orangutan/: mod.rs
src/book/englund_gambit/: mod.rs
src/book/englund_gambit_declined/: mod.rs
src/book/formation/: mod.rs
src/book/four_knights_game/: mod.rs
src/book/french_defense/: mod.rs
src/book/fried_fox_defense/: mod.rs
src/book/global_opening/: mod.rs
src/book/goldsmith_defense/: mod.rs
src/book/grob_opening/: mod.rs
src/book/grunfeld_defense/: mod.rs
src/book/gunderam_defense/: mod.rs
src/book/hippopotamus_defense/: mod.rs
src/book/horwitz_defense/: mod.rs
src/book/hungarian_opening/: mod.rs
src/book/indian_defense/: mod.rs
src/book/irish_gambit/: mod.rs
src/book/italian_game/: mod.rs
src/book/kadas_opening/: mod.rs
src/book/kangaroo_defense/: mod.rs
src/book/king_s_gambit/: mod.rs
src/book/king_s_gambit_accepted/: mod.rs
src/book/king_s_gambit_declined/: mod.rs
src/book/king_s_indian_attack/: mod.rs
src/book/king_s_indian_defense/: mod.rs
src/book/king_s_knight_opening/: mod.rs
src/book/king_s_pawn_game/: mod.rs
src/book/king_s_pawn_opening/: mod.rs
src/book/kings_gambit/: mod.rs
src/book/kings_gambit_accepted/: mod.rs
src/book/kings_gambit_declined/: mod.rs
src/book/kings_indian_attack/: mod.rs
src/book/kings_indian_defense/: mod.rs
src/book/kings_knight_opening/: mod.rs
src/book/kings_pawn_game/: mod.rs
src/book/kings_pawn_opening/: mod.rs
src/book/lasker_simul_special/: mod.rs
src/book/latvian_gambit/: mod.rs
src/book/latvian_gambit_accepted/: mod.rs
src/book/lemming_defense/: mod.rs
src/book/lion_defense/: mod.rs
src/book/london_system/: mod.rs
src/book/marienbad_system/: mod.rs
src/book/mexican_defense/: mod.rs
src/book/mieses_opening/: mod.rs
src/book/mikenas_defense/: mod.rs
src/book/modern_defense/: mod.rs
src/book/montevideo_defense/: mod.rs
src/book/neo_grunfeld_defense/: mod.rs
src/book/nimzo_indian_defense/: mod.rs
src/book/nimzo_larsen_attack/: mod.rs
src/book/nimzowitsch_defense/: mod.rs
src/book/old_indian_defense/: mod.rs
src/book/owen_defense/: mod.rs
src/book/paleface_attack/: mod.rs
src/book/petrov_s_defense/: mod.rs
src/book/petrovs_defense/: mod.rs
src/book/philidor_defense/: mod.rs
src/book/pirc_defense/: mod.rs
src/book/polish_defense/: mod.rs
src/book/polish_opening/: mod.rs
src/book/ponziani_opening/: mod.rs
src/book/portuguese_opening/: mod.rs
src/book/pseudo_queen_s_indian_defense/: mod.rs
src/book/pseudo_queens_indian_defense/: mod.rs
src/book/pterodactyl_defense/: mod.rs
src/book/queen_s_gambit/: mod.rs
src/book/queen_s_gambit_accepted/: mod.rs
src/book/queen_s_gambit_declined/: mod.rs
src/book/queen_s_indian_accelerated/: mod.rs
src/book/queen_s_indian_defense/: mod.rs
src/book/queen_s_pawn/: mod.rs
src/book/queen_s_pawn_game/: mod.rs
src/book/queens_gambit/: mod.rs
src/book/queens_gambit_accepted/: mod.rs
src/book/queens_gambit_declined/: mod.rs
src/book/queens_indian_accelerated/: mod.rs
src/book/queens_indian_defense/: mod.rs
src/book/queens_pawn/: mod.rs
src/book_gen/: mod.rs
src/openings/: mod.rs
updater/: Cargo.toml
updater/src/: constants.rs  main.rs  sans_pgn_visitor.rs
(+9608 files in other folders)
