[package]
name = "reco"
version = "0.1.1"
edition = "2024"
description = "An ECO (Encyclopaedia of Chess Openings) crate."
categories = [
    "data-structures",
    "game-development",
    "no-std",
    "no-std::no-alloc",
    "api-bindings",
]
keywords = ["chess", "eco", "dataset", "lichess"]
repository = "https://github.com/tigerros/reco"
license = "GPL-3"
rust-version = "1.85.1" # remember to update check.yml
readme = "README.md"
include = ["src", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
exclude = ["librarian"]
resolver = "3"
members = ["examples/find-opening", "librarian"]

[workspace.dependencies]
proptest = { version = "1", default-features = false }
reco = { path = "." }
shakmaty = { git = "https://github.com/niklasf/shakmaty", branch = "master", default-features = false }

[features]
serde = ["dep:serde", "deranged/serde"]
book = []
book-setup-to-line = []
book-flattened = []
alloc = []
proptest = ["dep:proptest"]

[dependencies]
deranged = { version = "0.4.0", default-features = false }
proptest = { version = "1", optional = true }
serde = { version = "1.0.197", default-features = false, features = ["derive"], optional = true }
shakmaty = { workspace = true }

[patch.crates-io]
shakmaty = { git = "https://github.com/niklasf/shakmaty", branch = "master" }
