[package]
name = "reco"
version = "0.1.1"
edition = "2024"
description = "An ECO (Encyclopaedia of Chess Openings) crate."
categories = [
    "data-structures",
    "game-development",
    "no-std",
    "no-std::no-alloc",
    "api-bindings",
]
keywords = ["chess", "eco", "dataset", "lichess"]
repository = "https://github.com/tigerros/reco"
license = "GPL-3.0+"
readme = "README.md"
include = ["src", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
exclude = ["librarian"]
resolver = "3"
members = ["examples/find-opening", "librarian"]

[workspace.dependencies]
proptest = { version = "1", default-features = false }
reco = { path = "." }
shakmaty = { git = "https://github.com/niklasf/shakmaty", branch = "master", default-features = false }

[features]
default = ["book", "std"]
# Adds functionality which requires `alloc`.
alloc = []
# Adds ECO entries as statics.
book = []
# Adds functionality which requires `std`. Most notably, it adds a lazily evaluated `book::SETUP_TO_LINE` static that maps `shakmaty::Setup`s to `Line`s drastically improving opening lookup time.
std = ["alloc"]
# Adds a compile time evaluated `book::FLATTENED` static that flattens the tree structure of `book::ALL`.
book-flattened = ["book"]
# Adds `serde` support for applicable types. **All implementations are derived with no parameters. This includes types that have a `FromStr` and `Display` implementation.**
serde = ["dep:serde", "deranged/serde"]
# Adds some `proptest` support. Requires `std`.
proptest = ["dep:proptest", "std"]

[dependencies]
deranged = { version = "0.4.0", default-features = false }
proptest = { version = "1", optional = true }
serde = { version = "1.0.197", default-features = false, features = ["derive"], optional = true }
shakmaty = { workspace = true }

[patch.crates-io]
shakmaty = { git = "https://github.com/niklasf/shakmaty", branch = "master" }
