[package]
name = "reco"
version = "0.1.2"
edition = "2024"
description = "An ECO (Encyclopaedia of Chess Openings) crate."
categories = [
    "data-structures",
    "game-development",
    "no-std",
    "no-std::no-alloc",
    "api-bindings",
]
keywords = ["chess", "eco", "dataset", "lichess"]
repository = "https://github.com/tigerros/reco"
authors = ["Leonard D."]
license = "GPL-3.0+"
readme = "README.md"
include = ["src", "README.md", "LICENSE"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
exclude = ["librarian"]
resolver = "3"
members = ["examples/find-opening", "librarian"]

[workspace.dependencies]
reco = { path = "." }
shakmaty = { version = "0.28.0", default-features = false }

[features]
default = ["book", "std"]
# Adds functionality which requires `alloc`.
alloc = []
# Adds ECO entries as statics.
book = []
# Adds functionality which requires `std`. Most notably, it adds a lazily evaluated `book::SETUP_TO_LINE` static that maps `shakmaty::Setup`s to `Line`s drastically improving opening lookup time.
std = ["alloc"]
# Adds a compile time evaluated `book::FLATTENED` static that flattens the tree structure of `book::ALL`.
book-flattened = ["book"]
# Adds `serde` support for applicable types. **All implementations are derived with no parameters. This includes types that have a `FromStr` and `Display` implementation.**
serde = ["dep:serde", "deranged/serde"]
# Adds `arbitrary` support. Requires `std`.
arbitrary = ["dep:arbitrary", "std"]
# Adds `proptest` support. Requires `std`.
proptest = ["dep:proptest", "std", "dep:proptest-derive"]

[dependencies]
arbitrary = { version = "1.4.1", default-features = false, features = ["derive_arbitrary"], optional = true }
deranged = { version = "0.4.0", default-features = false }
proptest = { version = "1", default-features = false, features = ["std"], optional = true }
proptest-derive = { version = "0", default-features = false, optional = true }
serde = { version = "1.0.197", default-features = false, features = ["derive"], optional = true }
shakmaty = { workspace = true }
