[package]
name = "reco-librarian"
version = "0.0.0"
edition = "2024"
publish = false
license = "GPL-3"
readme = "README.md"

[dependencies]
csv = "1"
deunicode = "1"
dotenvy = "0.15.7"
heck = "0.5.0"
http = "1"
itertools = "0.14.0"
reco = { path = "..", features = ["alloc"] }
serde = "^1.0.204"
serde_json = "1"
shakmaty = { workspace = true }
ureq = { version = "3", default-features = false, features = ["rustls", "json"] }
zip = { version = "3" }
