[package]
name = "librarian"
version = "0.0.0"
edition = "2024"
publish = false
license = "GPL-3"
readme = "README.md"

[dependencies]
csv = "1.3.1"
deunicode = "1.6.2"
dotenvy = "0.15.7"
heck = "0.5.0"
http = "1.3.1"
itertools = "0.14.0"
reco = { path = ".." }
serde_json = "1.0.140"
shakmaty = { git = "https://github.com/niklasf/shakmaty", branch = "master", default-features = false }
ureq = { version = "3.0.11", default-features = false, features = ["rustls", "json"] }
zip = { version = "3.0.0" }