[package]
name = "librarian"
version = "0.0.0"
edition = "2024"
publish = false
license = "GPL-3"
readme = "README.md"

[dependencies]
csv = "1.3.1"
deunicode = "1.6.2"
dotenvy = "0.15.7"
heck = "0.5.0"
http = "1.3.1"
indexmap = "2.10.0"
serde_json = "1.0.140"
shakmaty = { workspace = true }
ureq = { version = "3.0.12", default-features = false, features = ["rustls", "json"] }
zip = { version = "4.2.0", default-features = false, features = ["deflate"] }
