[package]
name = "updater"
version = "0.1.0"
edition = "2024"

[dependencies]
shakmaty = { workspace = true }
deranged = { workspace = true }
zip = { version = "2" }
dotenvy = { version = "0.15.7", default-features = false }
ureq = { version = "3", default-features = false, features = ["rustls", "json"] }
http = { version = "1", default-features = false, features = ["std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
csv = { version = "1", default-features = false }
reco = { path = ".." }
pgn-reader = { version = "0.26.0", default-features = false }
heck = { version = "0.5.0", default-features = false }