[package]
name = "updater"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
csv = { version = "1", default-features = false }
deunicode = { version = "1", default-features = false, features = ["alloc"] }
dotenvy = { version = "0.15.7", default-features = false }
heck = { version = "0.5.0", default-features = false }
http = { version = "1", default-features = false }
reco = { path = "..", features = ["alloc"] }
serde_json = { version = "1", default-features = false }
shakmaty = { workspace = true }
ureq = { version = "3", default-features = false, features = ["rustls", "json"] }
zip = { version = "2" }
