[package]
name = "reco"
version = "0.0.1"
edition = "2024"
description = "An ECO (Encyclopaedia of Chess Openings) crate"
categories = ["data-structures", "game-development", "no-std", "no-std::no-alloc", "api-bindings"]
keywords = ["chess", "eco", "dataset", "lichess"]
repository = "https://github.com/tigerros/reco"
license = "GPL-3"
rust-version = "1.85.1"

[dependencies]
reco-book = { workspace = true, optional = true }
reco-core = { workspace = true }

[features]
serde = ["reco-core/serde"]
alloc = ["reco-core/alloc"]
book = ["dep:reco-book"]
